test/expected/explain_alrgi.out
explain _Alignas(4) register int x
                    ^
21: error: "_Alignas" can not be combined with "register"
